# recon-tool

./: .gitignore  README.md  pyproject.toml  report.html  requirements.txt
jobs/: example_trades.yaml
recon/: __init__.py  api.py  auth.py  batch.py  cli.py  core.py  formatters.py  jobconfig.py  loaders.py  matching.py  recondiff.py  report.py  store.py  textdiff.py  webapp.py
recon/templates/: _base.html.j2  batch.html.j2  batch_report.html.j2  break_detail.html.j2  index.html.j2  login.html.j2  report.html.j2  run_detail.html.j2  runs.html.j2  setup.html.j2
tests/: test_batch.py  test_loaders.py  test_new_features.py  test_recon.py  test_textdiff.py  test_webapp.py
tests/fixtures/: A.java  B.java  a.csv  a.docx  a.json  a.txt  a.xlsx  a.xml  b.csv  b.docx  b.json  b.txt  b.xlsx  b.xml  make_fixtures.py  manifest.csv
