[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-tool"
version = "0.1.0"
description = "Compare and reconcile files of many types (txt, java, json, xml, docx, csv, xlsx) with pretty diffs and HTML reports"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "flask>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
recon = "recon.cli:main"

[tool.setuptools.packages.find]
include = ["recon*"]

[tool.setuptools.package-data]
recon = ["templates/*.j2"]
